[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/DrawingCanvas.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Rules.gd" type="Script" id=2]
[ext_resource path="res://Scripts/SystemViewport.gd" type="Script" id=3]
[ext_resource path="res://Scripts/RuleOptionButton.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ViewportCamera.gd" type="Script" id=5]
[ext_resource path="res://Scripts/ViewportContainer.gd" type="Script" id=6]

[node name="SystemViewport" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -0.200001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1600.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1593.0
margin_bottom = 31.0

[node name="RuleOptionButton" type="OptionButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 29.0
margin_bottom = 24.0
hint_tooltip = "Presets for the different configurations."
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="Rule7" type="ColorPickerButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 33.0
margin_right = 85.0
margin_bottom = 24.0
hint_tooltip = "Color for rule \"111\"."
text = "Rule 7"
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Rule6" type="ColorPickerButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 89.0
margin_right = 141.0
margin_bottom = 24.0
hint_tooltip = "Color for rule \"110\"."
text = "Rule 6"
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Rule5" type="ColorPickerButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 145.0
margin_right = 197.0
margin_bottom = 24.0
hint_tooltip = "Color for rule \"101\"."
text = "Rule 5"
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Rule4" type="ColorPickerButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 201.0
margin_right = 253.0
margin_bottom = 24.0
hint_tooltip = "Color for rule \"100\"."
text = "Rule 4"
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Rule3" type="ColorPickerButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 257.0
margin_right = 309.0
margin_bottom = 24.0
hint_tooltip = "Color for rule \"011\"."
text = "Rule 3"
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Rule2" type="ColorPickerButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 313.0
margin_right = 365.0
margin_bottom = 24.0
hint_tooltip = "Color for rule \"010\"."
text = "Rule 2"
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Rule1" type="ColorPickerButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 369.0
margin_right = 421.0
margin_bottom = 24.0
hint_tooltip = "Color for rule \"001\"."
text = "Rule 1"
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Rule0" type="ColorPickerButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 425.0
margin_right = 477.0
margin_bottom = 24.0
hint_tooltip = "Color for rule \"000\"."
text = "Rule 0"
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 481.0
margin_right = 485.0
margin_bottom = 24.0

[node name="RandomizeButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 489.0
margin_right = 553.0
margin_bottom = 24.0
hint_tooltip = "Randomize the colors of all the rules."
action_mode = 0
text = "Random"

[node name="InsertSeed" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 557.0
margin_right = 600.0
margin_bottom = 24.0
hint_tooltip = "Insert a row of random cells using the selected colors."
text = "Seed"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 604.0
margin_right = 608.0
margin_bottom = 24.0

[node name="TresholdLabel" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 612.0
margin_top = 5.0
margin_right = 667.0
margin_bottom = 19.0
text = "Treshold"

[node name="TresholdSlider" type="HSlider" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 671.0
margin_right = 1024.0
margin_bottom = 16.0
hint_tooltip = "The threshold of color at which the cell should be considered alive."
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1028.0
margin_right = 1032.0
margin_bottom = 24.0

[node name="SpeedLabel" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1036.0
margin_top = 5.0
margin_right = 1075.0
margin_bottom = 19.0
text = "Speed"

[node name="SpeedSlider" type="HSlider" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1079.0
margin_right = 1432.0
margin_bottom = 16.0
hint_tooltip = "The speed of iteration."
size_flags_horizontal = 3
min_value = 0.001
max_value = 5.0
step = 0.001
value = 0.05
exp_edit = true

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1436.0
margin_right = 1440.0
margin_bottom = 24.0

[node name="Play" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1444.0
margin_right = 1482.0
margin_bottom = 24.0
toggle_mode = true
text = "Play"

[node name="Continue" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1486.0
margin_right = 1586.0
margin_bottom = 24.0
hint_tooltip = "When set, the automaton will continue generating from the top when reaching the end of the canvas. When not set, the generation will pause when reaching the end of the canvas."
text = "Continuous"

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 1600.0
margin_bottom = 899.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 6 )

[node name="Viewport" type="Viewport" parent="VBoxContainer/ViewportContainer"]
size = Vector2( 1600, 857 )
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_direct_to_screen = true
render_target_update_mode = 3

[node name="ViewportCamera" type="Camera2D" parent="VBoxContainer/ViewportContainer/Viewport"]
rotating = true
current = true
limit_left = 0
limit_top = 0
script = ExtResource( 5 )

[node name="DrawingCanvas" type="TextureRect" parent="VBoxContainer/ViewportContainer/Viewport"]
mouse_filter = 2
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="VBoxContainer/ViewportContainer/Viewport/DrawingCanvas"]
wait_time = 0.05
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ViewportContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
margin_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenshotButton" type="Button" parent="VBoxContainer/ViewportContainer/HBoxContainer"]
visible = false
margin_right = 83.0
margin_bottom = 20.0
text = "Screenshot"

[node name="SaveButton" type="Button" parent="VBoxContainer/ViewportContainer/HBoxContainer"]
margin_right = 52.0
margin_bottom = 20.0
text = "Export"

[connection signal="item_selected" from="VBoxContainer/PanelContainer/HBoxContainer/RuleOptionButton" to="." method="set_color_rule"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/RandomizeButton" to="." method="_on_RandomizeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/InsertSeed" to="VBoxContainer/ViewportContainer/Viewport/DrawingCanvas" method="_insert_seed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/HBoxContainer/TresholdSlider" to="." method="_on_TresholdSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/HBoxContainer/SpeedSlider" to="VBoxContainer/ViewportContainer/Viewport/DrawingCanvas" method="_on_SpeedSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Play" to="." method="_on_PlayButton_pressed"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/HBoxContainer/Continue" to="." method="_on_Continue_toggled"]
[connection signal="focus_entered" from="VBoxContainer/ViewportContainer" to="VBoxContainer/ViewportContainer/Viewport/ViewportCamera" method="_on_ViewportContainer_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/ViewportContainer" to="VBoxContainer/ViewportContainer/Viewport/ViewportCamera" method="_on_ViewportContainer_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/ViewportContainer" to="VBoxContainer/ViewportContainer/Viewport/ViewportCamera" method="_on_ViewportContainer_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ViewportContainer" to="VBoxContainer/ViewportContainer/Viewport/ViewportCamera" method="_on_ViewportContainer_mouse_exited"]
[connection signal="move_end" from="VBoxContainer/ViewportContainer/Viewport/ViewportCamera" to="VBoxContainer/ViewportContainer" method="_on_ViewportCamera_move_end"]
[connection signal="move_start" from="VBoxContainer/ViewportContainer/Viewport/ViewportCamera" to="VBoxContainer/ViewportContainer" method="_on_ViewportCamera_move_start"]
[connection signal="timeout" from="VBoxContainer/ViewportContainer/Viewport/DrawingCanvas/Timer" to="VBoxContainer/ViewportContainer/Viewport/DrawingCanvas" method="_on_Timer_timeout"]
[connection signal="pressed" from="VBoxContainer/ViewportContainer/HBoxContainer/ScreenshotButton" to="." method="_save_screenshot"]
[connection signal="pressed" from="VBoxContainer/ViewportContainer/HBoxContainer/SaveButton" to="." method="_export_canvas"]
